--- a/resource/resource.qrc
+++ b/resource/resource.qrc
@@ -1,12 +1,15 @@
 <RCC>
     <qresource prefix="/icons">
         <file>icon/box.png</file>
+        <file>icon/clipping.svg</file>
         <file>icon/cone.png</file>
         <file>icon/cylinder.png</file>
         <file>icon/fit.png</file>
         <file>icon/interference.png</file>
         <file>icon/open.png</file>
+        <file>icon/file_new.svg</file>
+        <file>icon/select.svg</file>
         <file>icon/sphere.png</file>
-
+        <file>icon/version.svg</file>
     </qresource>
 </RCC>
