feat : select filter

--- a/resource/resource.qrc
+++ b/resource/resource.qrc
@@ -9,6 +9,7 @@
         <file>icon/fit.png</file>
         <file>icon/interference.png</file>
         <file>icon/select.svg</file>
+        <file>icon/select_filter.svg</file>
         <file>icon/tool_transform.svg</file>
         <file>icon/measure_angle.svg</file>
         <file>icon/measure_arc_length.svg</file>
