--- a/resource/resource.qrc
+++ b/resource/resource.qrc
@@ -19,6 +19,7 @@
         <file>icon/patter_2d_linear.svg</file>
         <file>icon/patter_linear.svg</file>
         <file>icon/pattern_circular.svg</file>
+        <file>icon/shape_tool_shell.svg</file>
         <file>icon/select.svg</file>
         <file>icon/select_filter.svg</file>
         <file>icon/tool_explosion.svg</file>
