--- a/resource/resource.qrc
+++ b/resource/resource.qrc
@@ -14,6 +14,7 @@
         <file>icon/display_mode_wireframe.svg</file>
         <file>icon/display_mode.svg</file>
         <file>icon/file_new.svg</file>
+        <file>icon/export_three_view_drawing.svg</file>
         <file>icon/fit.png</file>
         <file>icon/interference.png</file>
         <file>icon/patter_2d_linear.svg</file>
