--- a/resource/resource.qrc
+++ b/resource/resource.qrc
@@ -13,7 +13,11 @@
         <file>icon/display_mode_shading.svg</file>
         <file>icon/display_mode_wireframe.svg</file>
         <file>icon/display_mode.svg</file>
+        <file>icon/file_exit.svg</file>
+        <file>icon/file_export_picture.svg</file>
+        <file>icon/file_export_file.svg</file>
         <file>icon/file_new.svg</file>
+        <file>icon/file_save_as.svg</file>
         <file>icon/fit.png</file>
         <file>icon/interference.png</file>
         <file>icon/patter_2d_linear.svg</file>
